--- a/styles.css
+++ b/styles.css
@@ -206,7 +206,7 @@ td, th {
 }
 
 .w-icon-nav-menu:before {
-  content: "î˜‚";
+  content: "≡";
 }
 
 .w-icon-arrow-down:before, .w-icon-dropdown-toggle:before {
